--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@tanstack/react-query": "^5.56.2",
-    "@wagmi/core": "^2.16.7",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-persist-client": "^4.36.1",
+    "@wagmi/core": "^1.4.13",
     "@walletconnect/web3-provider": "^1.8.0",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
